--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Personal
 .vscode
 *.dSYM/
 main
+*.bin
 
 # User-specific files
 *.suo
