--- a/Lab10/Lab10.vcxproj
+++ b/Lab10/Lab10.vcxproj
@@ -32,10 +32,12 @@
     <ClCompile Include="calc.c" />
     <ClCompile Include="eprpc.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="test.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="calc.h" />
     <ClInclude Include="eprpc.h" />
+    <ClInclude Include="test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
