--- a/Lab10/Lab10.vcxproj.filters
+++ b/Lab10/Lab10.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="calc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="eprpc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="calc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
